log/build_2021-05-11_10-36-25/ros2yolo/stderr.log
  File "/home/mingyu/rosyolo_final/install/ros2yolo/lib/python3.8/site-packages/ros2yolo/yolo_map.py", line 29
    def point_mark(x1,x2,y1,y2,data)
                                       ^
SyntaxError: invalid syntax

